<resources>
    <string name="app_name">Air Rybnik</string>
    <string name="where_label">Gdzie:</string>
    <string name="rybnik">Rybnik</string>
    <string name="what_label">Co:</string>
    <string name="howMany_label">Ile:</string>
    <string name="when_label">Kiedy:</string>
    <string name="pm10_label">PM10</string>
    <string name="refresh_button_description">Odśwież</string>
    <string name="dataUpdate_notification_channel_id" translatable="false">dataUpdate_channel</string>
    <string name="dataUpdate_notification_channel_name" translatable="true">Nowe Dane</string>
    <string name="appwidget_text">EXAMPLE</string>
</resources>