<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.gmail.remarkable.development.airrybnik.pm10.RybnikPm10ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/where_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/where_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/where_textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/where_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/rybnik"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/where_label_textView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/what_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/what_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/what_textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/what_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/pm10_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toEndOf="@+id/what_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/where_textView"
            tools:text="PM10" />

        <TextView
            android:id="@+id/howMany_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/howMany_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/howMany_textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/howMany_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toEndOf="@+id/howMany_label_textView"
            app:layout_constraintTop_toBottomOf="@+id/what_textView"
            app:valueString="@{viewModel.response}"
            tools:text="120" />

        <TextView
            android:id="@+id/when_label_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:text="@string/when_label"
            app:layout_constraintBaseline_toBaselineOf="@+id/when_textView"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/when_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            app:dateString="@{viewModel.response}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/when_label_textView"
            tools:text="2020-10-18 14:00:00" />

        <TextView
            android:id="@+id/error_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@{viewModel.errorMessage}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/pm10_pie_chart"
            tools:text="Some error occurred" />

        <ImageButton
            android:id="@+id/syncButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:contentDescription="@string/refresh_button_description"
            android:onClick="@{() -> viewModel.getGiosPm10fromRybnik()}"
            app:hideRefreshButton="@{viewModel.isLoading}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_popup_sync" />

        <ProgressBar
            android:id="@+id/loading_spinner"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/syncButton"
            app:layout_constraintEnd_toEndOf="@+id/syncButton"
            app:layout_constraintStart_toStartOf="@+id/syncButton"
            app:layout_constraintTop_toTopOf="@+id/syncButton"
            app:showSpinner="@{viewModel.isLoading}" />

        <include
            android:id="@+id/pm10_pie_chart"
            layout="@layout/chart_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:viewModel="@{viewModel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>